# forgecad-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: .gitkeep
proprietary/ai-agents/: __init__.py  gpt_agent.py  ollama_agent.py  orchestrator.py
proprietary/api/: __init__.py  main.py  requirements.txt
proprietary/cad-language/: __init__.py  compiler.py  grammar.py  parser.py
proprietary/cloud-services/: __init__.py  deployment.py
proprietary/core-engine/: __init__.py  lifecycle.py  project.py
proprietary/database/: __init__.py  repository.py
proprietary/desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OccView.h  OccView.mm  main.cpp
proprietary/manufacturing-engine/: __init__.py  toolpath.py
proprietary/occt-adapter/: CMakeLists.txt
proprietary/occt-adapter/include/forgecad/: occt_adapter.hpp  occt_shape.hpp
proprietary/occt-adapter/src/: occt_adapter.cpp
proprietary/simulation-engine/: __init__.py  simulator.py
proprietary/ui/: index.html  package-lock.json  package.json
proprietary/ui/src/: App.tsx
scripts/: build-occt-adapter.sh  build-occt.sh  run-desktop.sh
tests/: test_platform.py
